--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Vidly.Models.Movie>
+﻿@model IEnumerable<Vidly.Models.Movie>
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
