--- a/Views/Genre/GenreForm.cshtml
+++ b/Views/Genre/GenreForm.cshtml
@@ -1,10 +1,17 @@
 ﻿@model Vidly.Models.Genre
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Add/Update Genre";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Add Genre Form</h2>
+@if (Model == null)
+{
+    <h2>Add New Genre</h2>
+}
+else
+{
+    <h2>Update Genre</h2>
+}
 
 @using (Html.BeginForm("Save", "Genre", null, FormMethod.Post, new { @class = "myForm" }))
 {
@@ -12,6 +19,6 @@
         @Html.LabelFor(g => g.GenreName)
         @Html.TextBoxFor(g => g.GenreName, null, new { @class = "form-control", placeholder = "Enter genre name" })
     </div>
-
-    <button type="submit" class="btn btn-primary">Add New Genre</button>
+    @Html.HiddenFor(g => g.Id)
+    <button type="submit" class="btn btn-primary">Save Genre</button>
 }
