--- a/Views/Genre/Index.cshtml
+++ b/Views/Genre/Index.cshtml
@@ -14,6 +14,7 @@
             <th>Id</th>
             <th>Genre Name</th>
             <th>Edit</th>
+            <th>Delete</th>
         </tr>
     </thead>
 
@@ -25,6 +26,7 @@
                 <td>@g.Id</td>
                 <td>@g.GenreName</td>
                 <td>@Html.ActionLink("Update", "Update", "Genre", new { id = g.Id }, new { @class = "btn btn-success btn-sm" })</td>
+                <td>@Html.ActionLink("Delete", "Delete", "Genre", new { id = g.Id }, new { @class = "btn btn-danger btn-sm" })</td>
             </tr>
         }
     </tbody>
