--- a/Views/Genre/GenreForm.cshtml
+++ b/Views/Genre/GenreForm.cshtml
@@ -18,6 +18,7 @@ else
     <div class="form-group">
         @Html.LabelFor(g => g.GenreName)
         @Html.TextBoxFor(g => g.GenreName, null, new { @class = "form-control", placeholder = "Enter genre name" })
+        @Html.ValidationMessageFor(g => g.GenreName)
     </div>
     @Html.HiddenFor(g => g.Id)
     <button type="submit" class="btn btn-primary">Save Genre</button>
