--- a/Views/Movies/MovieForm.cshtml
+++ b/Views/Movies/MovieForm.cshtml
@@ -6,12 +6,13 @@
 }
 
 <h2>Add New Movie</h2>
-
+@Html.ValidationSummary()
 @using (Html.BeginForm("Save", "Movies", new { }, FormMethod.Post, new { @class = "myFormClass" }))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Name)
         @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Actor)
@@ -20,19 +21,29 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
         @Html.TextBoxFor(m => m.Movie.ReleaseDate, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.ReleaseDate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.DateAdded)
         @Html.TextBoxFor(m => m.Movie.DateAdded, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.DateAdded)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Genre)
         @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genre, "Id", "GenreName"), "Select Genre", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.GenreId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Stock)
         @Html.TextBoxFor(m => m.Movie.Stock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Stock)
     </div>
-    <!-- submit button -->
+    <!--submit button-->
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Add New Movie</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
